envoy-tcp-2.yaml
# 该配置基于 envoy-1.16.3

"admin":
  "access_log_path": "/dev/null"
  "address":
    "socket_address":
      "address": "0.0.0.0"
      "port_value": 9901
"static_resources":
  "clusters":
  - "connect_timeout": "3s"
    "health_checks":
    - "healthy_threshold": 3
      "interval": "5s"
      "tcp_health_check": {}
      "timeout": "2s"
      "unhealthy_threshold": 1
    "load_assignment":
      "cluster_name": "logicserver"
      "endpoints":
      - "lb_endpoints":
        - "endpoint":
            "address":
              "socket_address":
                "address": "logicserver.sh3-cloudagent.svc.cluster.local"
                "port_value": 8888
    "name": "logicserver"
    "protocol_selection": "USE_DOWNSTREAM_PROTOCOL"
    "type": "STRICT_DNS"
  "listeners":
  - "address":
      "socket_address":
        "address": "0.0.0.0"
        "port_value": 6666
    "filter_chains":
    - "filters":
      - "name": "envoy.filters.network.http_connection_manager"
        "typed_config":
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          "http_filters":
          - "name": "envoy.router"
            "typed_config": {}
          "route_config":
            "name": "local_route"
            "virtual_hosts":
            - "domains":
              - "*"
              "name": "backend"
              "routes":
              - "match":
                  "grpc": {}
                  "prefix": "/services.GatewayToLogic/AgentHeartBeat"
                "route":
                  "cluster": "logicserver"
              - "match":
                  "grpc": {}
                  "prefix": "/services.GatewayToLogic/RunPluginNotify"
                "route":
                  "cluster": "logicserver"
              - "match":
                  "grpc": {}
                  "prefix": "/services.GatewayToLogic/AgentTunnelOutput"
                "route":
                  "cluster": "logicserver"
          "stat_prefix": "ingress_http"
    "name": "logicserver-proxy"
