envoy.yaml
static_resources:
  # listeners configuration
  listeners:
  # listener for main function
  - name: http-proxy
    address:
      socket_address: { address: 0.0.0.0, port_value: 8888 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config: 
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  # /* Don't need to rewrite host */ 
                  # host_rewrite: myservice-backend.mycompany.com
                  cluster: alerta-server
                  request_mirror_policy:
                    cluster: event-gateway
                    runtime_fraction: { default_value: { numerator: 100 } }
          http_filters:
          - name: envoy.router 

  # clusters configuration
  clusters:
  - name: alerta-server
    connect_timeout: 10s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: www.baidu.com, port_value: 80 }}]
  - name: event-gateway
    connect_timeout: 10s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: 192.168.3.91, port_value: 6666 }}]
